--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,4 +1,25 @@
-node_modules
-npm-debug.log
-.DS_Store
+# Ignore the .github folder
+.github/
+
+# Ignore node_modules
+node_modules/
+
+# Ignore build artifacts
+dist/
+build/
+
+# Ignore environment files
 .env
+.env.local
+
+# Ignore Git files
+.git/
+.gitignore
+
+# Ignore Docker-related files
+Dockerfile
+.dockerignore
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
