--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: navigate to backend directory
+        run: cd backend
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
