--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: navigate to backend directory
-        run: cd backend
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -23,18 +20,21 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/busify:latest .
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/busify:latest ./backend
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/busify:latest
 
-      - name: Deploy to Azure Container App
-        uses: azure/CLI@v1
+      - name: Azure Login
+        uses: azure/login@v1
         with:
-          azcliversion: latest
-          inlineScript: |
-            az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-            az containerapp update \
-              --name busify \
-              --resource-group busify-resource \
-              --image ${{ secrets.DOCKER_HUB_USERNAME }}/busify:latest
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure Container App
+        run: |
+          az containerapp update \
+            --name busify \
+            --resource-group busify-resource \
+            --image ${{ secrets.DOCKER_HUB_USERNAME }}/busify:latest
